<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/goal_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goal_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:id="@+id/goal_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/title_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                tools:text="@string/goal_title" />

            <ImageView
                android:id="@+id/goal_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/goal_photo_background"
                android:cropToPadding="true"
                android:importantForAccessibility="no"
                android:scaleType="centerInside"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />
        </LinearLayout>

        <TextView
            android:id="@+id/last_updated_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="@string/last_updated_text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/paused_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paused_checkbox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/completed_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed_checkbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/notes_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/note_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="true" /> <!-- Confirm value-->

        <!-- <Button
            android:id="@+id/note_0_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            tools:text="@string/note_0_button" />

        <Button
            android:id="@+id/note_1_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            tools:text="@string/note_1_button" />

        <Button
            android:id="@+id/note_2_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            tools:text="@string/note_2_button" />

        <Button
            android:id="@+id/note_3_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            tools:text="@string/note_3_button" />

        <Button
            android:id="@+id/note_4_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            tools:text="@string/paused" /> -->

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_progress_button"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/progress_dialog_title"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_add" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
